Clase 10/api-rust-dp-svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-rust-deploy
  labels:
    app: api-rust
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-rust
  template:
    metadata:
      labels:
        app: api-rust
    spec:
      containers:
      - name: api-rust
        # Usa la URL de ngrok que se obtuvo
        image: 5c57e5445bb9.ngrok-free.app/api-rust
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-rust-service
  labels:
    app: api-rust
spec:
  selector:
    app: api-rust
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
